--- a/pages/post.html
+++ b/pages/post.html
@@ -24,10 +24,10 @@
 
         <nav class="nav bar">
             <ul>
-                <li><a href="../../blog.html">Welcome</a></li>
+                <li><a href="../blog.html">Welcome</a></li>
                 <li><a href="./post.html">Blog</a></li>
-                <li><a href="../../blog.html">About Me</a></li>
-                <li><a href="../../blog.html">Leave a Comment</a></li>
+                <li><a href="../blog.html">About Me</a></li>
+                <li><a href="../blog.html">Leave a Comment</a></li>
             </ul>
         </nav>
     </header>
@@ -44,9 +44,9 @@
             <hr>
             <h3>Related Post</h3>
             <ul>
-                <li><a href="../../blog.html">Lorem 1</a></li>
+                <li><a href="../blog.html">Lorem 1</a></li>
                 <li><a href="./post.html">Spline</a></li>
-                <li><a href="../../blog.html">Picsum 3</a></li>
+                <li><a href="../blog.html">Picsum 3</a></li>
             </ul>
             <br>
             <hr>
